Fix thumbnail height in CSS only, no html attr. Don't h-stretch.

--- a/frontends/etiquette_flask/static/css/photo_card.css
+++ b/frontends/etiquette_flask/static/css/photo_card.css
@@ -26,6 +26,7 @@
 {
     position: relative;
     display: inline-grid;
+    vertical-align: top;
     grid-template-columns: auto auto;
     grid-template-rows: auto 1fr auto;
     grid-template-areas:
@@ -52,10 +53,15 @@
     grid-area: thumbnail;
     align-self: start;
     justify-self: center;
+    display: flex;
+    width: 100%;
+    height: 150px;
 }
 .photo_card_thumbnail img
 {
     max-width: 100%;
+    max-height: 100%;
+    margin: auto;
 }
 .photo_card_filename
 {
